# LiveDance

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/drawable/: bg_blue.xml  bg_red.xml  biankuan.xml  biankuan1.xml  gift_select.xml  ic_3d_rotation_24px.xml  ic_accelerator_24px.xml  ic_add_24px.xml  ic_drawer_menu_24px.xml  ic_edit_black_24dp.xml  ic_exit_to_app_black_24dp.xml  ic_live_tv_black_24dp.xml  ic_queue_music_black_24dp.xml  ic_search_24px.xml  live_playing.xml  music_select.xml  text_view.xml
app/src/main/res/layout/: activity_imagevideo.xml  activity_livepush.xml  activity_liveroom.xml  activity_login.xml  activity_magic.xml  activity_main.xml  activity_makevideo.xml  activity_more_live.xml  activity_otheruser.xml  activity_update_room.xml  activity_update_userinfo.xml  activity_video_2d.xml  activity_vr_glsurface_view.xml  cat_bottomsheet_scrollable_content.xml  cat_popup_item.xml  ctrl_list.xml  edit_text.xml  frag_appbar1.xml  frag_appbar2.xml  frag_focus.xml  frag_index.xml  frag_interactive.xml  frag_layer.xml  frag_live.xml  frag_live_view.xml  frag_userinfo.xml  gift_menu_item.xml  (+10 more)
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/xurent/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: Android.h  PushCallJava.cpp  PushCallJava.h  PushQueue.cpp  PushQueue.h  RtmpPush.cpp  RtmpPush.h  Video.cpp  Video.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPlaystatus.cpp  WlPlaystatus.h  WlQueue.cpp  WlQueue.h  native-lib.cpp
myplayer/src/main/cpp/include/libavutil/: common.h  hwcontext.h  mem.h  pixfmt.h  spherical.h
myplayer/src/main/java/com/xurent/myplayer/: TimeInfoBean.java
myplayer/src/main/java/com/xurent/myplayer/listener/: MyLaoutCallBackListener.java  WlOnCompleteListener.java  WlOnErrorListener.java  WlOnParparedListener.java  WlOnPauseResumeListener.java  WlOnloadListener.java  WlOntimeInfoListener.java
myplayer/src/main/java/com/xurent/myplayer/log/: MyLog.java
myplayer/src/main/java/com/xurent/myplayer/opengl/: GlSurfaceView.java  ShaderUtils.java  WlRender.java
myplayer/src/main/java/com/xurent/myplayer/player/: WLPlayer.java
myplayer/src/main/java/com/xurent/myplayer/push/: ConnectListenr.java  PushVideo.java
myplayer/src/main/java/com/xurent/myplayer/util/: DisplayUtil.java  ResReadUtils.java  ShaderUtils.java  WlShaderUtil.java  WlTimeUtil.java  WlVideoSupportUitl.java
myplayer/src/main/java/com/xurent/myplayer/vr/: VRGlassGLVideoRenderer.java  VrSurfaceView.java
myplayer/src/main/res/raw/: fragment_shader.glsl  fragment_vr_shader.glsl  vertex_vr_shader.glsl
myplayer/src/main/res/values/: strings.xml
myplayer/src/test/java/com/xurent/myplayer/: ExampleUnitTest.java
(+100 files in other folders)
